--- a/main.ipynb
+++ b/main.ipynb
@@ -6,29 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import g4f\n",
-    "\n",
-    "def get_word_family_etymology(word):\n",
-    "    engine = g4f.client.Client()\n",
-    "\n",
-    "    completion = engine.chat.completions.create(\n",
-    "        model=\"gpt-3.5-turbo\",\n",
-    "        messages=[{\"role\": \"user\", \"content\": f\"\"\"\n",
-    "    I will provide you a word and you should write all word family of it with very brief meanings and differences (if any exist).\n",
-    "    Please respond in JSON and don't write extra explanations. The word family list should be complete for the word.\n",
-    "    For example, for the request: shrink\n",
-    "    response: {{\n",
-    "        \"word_family\": [\n",
-    "            {{\"word_form\": \"shrink\", \"part_of_speech\": \"verb\", \"definition\": \"to contract or become smaller.\"}},\n",
-    "            {{\"word_form\": \"shrinkage\", \"part_of_speech\": \"noun\", \"definition\": \"the process or result of shrinking.\"}},\n",
-    "            {{\"word_form\": \"shrinkable\", \"part_of_speech\": \"adjective\", \"definition\": \"capable of being shrunk.\"}}\n",
-    "        ],\n",
-    "        \"etymology\": \"The word 'shrink' originates from Middle English 'shrinken,' from Old English 'scrincan,' meaning 'to contract or shrivel.'\"\n",
-    "    }}\n",
-    "    Tell me about the word '{word}'.\n",
-    "\"\"\"}])\n",
-    "\n",
-    "    return completion.choices[0].message.content\n"
+    "! pip install -U g4f[all] > install"
    ]
   },
   {
